syntax = "proto3";
option java_multiple_files = true;
package proto;

message BookmarkRequest {
  string url = 1;
  string tags = 2;
}

message BookmarkResponse {
  string status = 1;
}

message EmptyParams{}

message HtmlResponse{
  string value = 1;
}

service BookmarkController {
  rpc addBookmark(BookmarkRequest) returns (BookmarkResponse);
  rpc getHtml(EmptyParams) returns (HtmlResponse);
}